fixed overflow scroll issue on projects pages

--- a/projects/static/sass/sound.sass
+++ b/projects/static/sass/sound.sass
@@ -59,6 +59,7 @@
     height: 62%
     width: 30%
     left: 34%
+    overflow: scroll
     @media screen and (max-width: 768px)
       left: 3%
       width: 90%
